# clipline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: dockerhub.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  db.py  main.py  models.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/services/: common.py  exports.py  paths.py  probe.py  scanner.py  scheduler.py  sources.py  streaming.py  thumbnails.py  time_parser.py  timeline.py
docs/: API_AND_DB.md  DOCKERHUB_OVERVIEW.md  MVP_SCOPE.md  PRD.md  TASK_PROGRESS.md  TECH_DESIGN.md  UI_FLOW.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
